firmware/lib/chapro.h


    typedef long int32_t;

    typedef void **CHA_PTR;


    /*****************************************************/

    // CHAPRO state

    typedef struct
    {
        int32_t arsiz; // total size of data (bytes)
        int32_t ptsiz; // number of data pointers
        void **cp;     // array of data pointers
        void *data;    // pointer to data
        double sr;     // sampling rate (kHz)
        int32_t cs;    // chunk size
        int32_t type;  // type of state
        int32_t entry; // entry point index
        void *rprt;    // pointer to report function
        void *proc;    // pointer to process function
    } CHA_STA;

    typedef struct
    {
        double attack;               // attack time (ms)
        double release;              // release time (ms)
        double maxdB;                // maximum signal (dB SPL)
        int32_t ear;                 // 0=left, 1=right
        int32_t nchannel;            // number of channels
        double cross_freq[DSL_MXCH]; // cross frequencies (Hz)
        double tkgain[DSL_MXCH];     // compression-start gain
        double cr[DSL_MXCH];         // compression ratio
        double tk[DSL_MXCH];         // compression-start kneepoint
        double bolt[DSL_MXCH];       // broadband output limiting threshold
    } CHA_DSL;


    typedef struct
    {
        double attack;  // attack time (ms)
        double release; // release time (ms)
        double fs;      // sampling rate (Hz)
        double maxdB;   // maximum signal (dB SPL)
        double tkgain;  // compression-start gain
        double tk;      // compression-start kneepoint
        double cr;      // compression ratio
        double bolt;    // broadband output limiting threshold
        // processing parameters
        double td;  // target delay
        int32_t nz; // filter order
        int32_t nw; // window size
        int32_t wt; // window type: 0=Hamming, 1=Blackman
    } CHA_WDRC;

    typedef struct
    {
        int32_t cm;           // compression mode
        int32_t nc;           // number of channels
        double fc[CLS_MXCH];  // center frequency
        double bw[CLS_MXCH];  // bandwith
        double Gcs[CLS_MXCH]; // gain at compression start
        double Gcm[CLS_MXCH]; // gain at compression middle
        double Gce[CLS_MXCH]; // gain at compression end
        double Gmx[CLS_MXCH]; // maximum gain
        double Lcs[CLS_MXCH]; // level at compression start
        double Lcm[CLS_MXCH]; // level at compression middle
        double Lce[CLS_MXCH]; // level at compression end
        double Lmx[CLS_MXCH]; // maximum output level
    } CHA_CLS;


    /*****************************************************/

    typedef struct
    {
        // simulation parameters
        double fbg; // simulated-feedback gain
        // AFC parameters
        double rho;   // forgetting factor
        double eps;   // power threshold
        double mu;    // step size
        double alf;   // band-limit update
        int32_t afl;  // adaptive-filter length
        int32_t wfl;  // whiten-filter length
        int32_t pfl;  // pre-emphasis-filter length
        int32_t fbl;  // simulated-feedback length
        int32_t hdel; // output/input hardware delay
        int32_t pup;  // band-limit update period
        // feedback filter buffers
        float *efbp; // estimated-feedback buffer pointer
        float *sfbp; // simulated-feedback buffer pointer
        float *wfrp; // whiten-filter buffer pointer
        float *ffrp; // pre-emphasis-filter buffer pointer
        // quality metric buffers & parameters
        float *qm;     // quality-metric buffer pointer
        int32_t *iqmp; // quality-metric index pointer
        int32_t nqm;   // quality-metric buffer size
        int32_t iqm;   // quality-metric index
        int32_t sqm;   // save quality metric ?
        CHA_PTR pcp;   // previous CHA_PTR
    } CHA_AFC;


    typedef struct
    {
        int32_t cs;  // chunk size
        int32_t nw;  // window size (pow2)
        int32_t wt;  // window type: 0=Hamming, 1=Blackman
        int32_t nm;  // frequency-map size
        double sr;   // sampling rate (Hz)
        double lbf;  // compression-lower-bound frequency (Hz)
        double ubf;  // compression-upper-bound frequency (Hz)
        int32_t *mm; // frequency-map pointer
        float *g1;   // pre-map gain pointer
        float *g2;   // post-map gain pointer
    } CHA_NFC;


    typedef struct
    {
        int32_t cs;  // chunk size
        int32_t nw;  // window size (pow2)
        int32_t wt;  // window type: 0=Hamming, 1=Blackman
        int32_t nm;  // frequency-map size
        int32_t xr;  // expansion ratio
        int32_t hbw; // half-band-width of suppression
        double sr;   // sampling rate (Hz)
        double lbf;  // compression-lower-bound frequency (Hz)
        double ubf;  // compression-upper-bound frequency (Hz)
        double ref;  // SPL reference
        double Gmax; // maximum gain (dB)
        double Lmax; // maximum output level (dB SPL)
        double Lckp; // compression knee-point input level (dB SPL)
        double Lekp; // expansion knee-point input level (dB SPL)
        int32_t *mm; // frequency-map pointer
        float *g1;   // pre-map gain pointer
        float *g2;   // post-map gain pointer
        float *supp; // suppressive influence pointer
    } CHA_SHA;


    /*****************************************************/

    // CHA common functions

    FUNC(void *)
    cha_allocate(CHA_PTR, int, int, int);

    FUNC(void)
    cha_cleanup(CHA_PTR);

    FUNC(void)
    cha_chunk_size(CHA_PTR, int);

    FUNC(int)
    cha_data_gen(CHA_PTR, char *);

    FUNC(int)
    cha_data_save(CHA_PTR, char *);

    FUNC(int)
    cha_data_load(CHA_PTR, char *);

    FUNC(int)
    cha_state_save(CHA_PTR, CHA_STA *);

    FUNC(int)
    cha_state_copy(CHA_STA *, CHA_STA *);

    FUNC(int)
    cha_state_free(CHA_STA *);

    FUNC(int)
    cha_fft(float *, int);

    FUNC(int)
    cha_ifft(float *, int);

    FUNC(void)
    cha_fft_cr(float *, int);

    FUNC(void)
    cha_fft_rc(float *, int);

    FUNC(void)
    cha_prepare(CHA_PTR);

    FUNC(void)
    cha_scale(float *, int, float);

    FUNC(char *)
    cha_version(void);


    /*****************************************************/

    // firfb module

    FUNC(int)
    cha_firfb_prepare(CHA_PTR, double *, int, double, int, int, int);

    FUNC(void)
    cha_firfb_analyze(CHA_PTR, float *, float *, int);

    FUNC(void)
    cha_firfb_synthesize(CHA_PTR, float *, float *, int);


    // iirfb module

    FUNC(int)
    cha_iirfb_design(float *, float *, float *, int *, double *, int, int, double, double);

    FUNC(int)
    cha_iirfb_prepare(CHA_PTR, float *, float *, float *, int *, int, int, double, int);

    FUNC(void)
    cha_iirfb_analyze(CHA_PTR, float *, float *, int);

    FUNC(void)
    cha_iirfb_synthesize(CHA_PTR, float *, float *, int);


    // cfirfb module

    FUNC(int)
    cha_cfirfb_prepare(CHA_PTR, double *, int, double, int, int, int);

    FUNC(void)
    cha_cfirfb_analyze(CHA_PTR, float *, float *, int);

    FUNC(void)
    cha_cfirfb_synthesize(CHA_PTR, float *, float *, int);


    // ciirfb module

    FUNC(int)
    cha_ciirfb_design(float *, float *, float *, int *, int, double *, double *, double, double);

    FUNC(int)
    cha_ciirfb_prepare(CHA_PTR, float *, float *, float *, int *, int, int, double, int);

    FUNC(void)
    cha_ciirfb_analyze(CHA_PTR, float *, float *, int);

    FUNC(void)
    cha_ciirfb_synthesize(CHA_PTR, float *, float *, int);


    // double ciirfb module

    FUNC(int)
    cha_dciirfb_prepare(CHA_PTR, float *, float *, float *, int *, int, int, double, int);

    FUNC(void)
    cha_dciirfb_analyze(CHA_PTR, float *, float *, int);

    FUNC(void)
    cha_dciirfb_synthesize(CHA_PTR, float *, float *, int);


    /*****************************************************/

    // AGC compressor module

    FUNC(int)
    cha_agc_prepare(CHA_PTR, CHA_DSL *, CHA_WDRC *);

    FUNC(void)
    cha_agc_input(CHA_PTR, float *, float *, int);

    FUNC(void)
    cha_agc_channel(CHA_PTR, float *, float *, int);

    FUNC(void)
    cha_agc_output(CHA_PTR, float *, float *, int);


    // instantanous compressor module

    FUNC(int)
    cha_icmp_prepare(CHA_PTR, CHA_CLS *, double, double, int);

    FUNC(void)
    cha_icmp_process(CHA_PTR, float *, float *, int);


    /*****************************************************/

    // feedback module

    FUNC(int)
    cha_afc_prepare(CHA_PTR, CHA_AFC *);

    FUNC(int)
    cha_afc_filters(CHA_PTR, CHA_AFC *);

    FUNC(void)
    cha_afc_input(CHA_PTR, float *, float *, int);

    FUNC(void)
    cha_afc_output(CHA_PTR, float *, int);


    /*****************************************************/

    // frequency-compression module

    FUNC(int)
    cha_nfc_prepare(CHA_PTR, CHA_NFC *);

    FUNC(void)
    cha_nfc_process(CHA_PTR, float *, float *, int);


    /*****************************************************/

    // suppression module

    FUNC(int)
    cha_sha_prepare(CHA_PTR, CHA_SHA *);