firmware/src/sw_dsp/chapro.rs

#[test]
fn bindgen_test_layout_CHA_SHA() {
    const UNINIT: ::core::mem::MaybeUninit<CHA_SHA> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<CHA_SHA>(),
        120usize,
        concat!("Size of: ", stringify!(CHA_SHA))
    );
    assert_eq!(
        ::core::mem::align_of::<CHA_SHA>(),
        8usize,
        concat!("Alignment of ", stringify!(CHA_SHA))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).cs) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_SHA),
            "::",
            stringify!(cs)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).nw) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_SHA),
            "::",
            stringify!(nw)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).wt) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_SHA),
            "::",
            stringify!(wt)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).nm) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_SHA),
            "::",
            stringify!(nm)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).xr) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_SHA),
            "::",
            stringify!(xr)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).hbw) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_SHA),
            "::",
            stringify!(hbw)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).sr) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_SHA),
            "::",
            stringify!(sr)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).lbf) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_SHA),
            "::",
            stringify!(lbf)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).ubf) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_SHA),
            "::",
            stringify!(ubf)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).ref_) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_SHA),
            "::",
            stringify!(ref_)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).Gmax) as usize - ptr as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_SHA),
            "::",
            stringify!(Gmax)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).Lmax) as usize - ptr as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_SHA),
            "::",
            stringify!(Lmax)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).Lckp) as usize - ptr as usize },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_SHA),
            "::",
            stringify!(Lckp)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).Lekp) as usize - ptr as usize },
        80usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_SHA),
            "::",
            stringify!(Lekp)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).mm) as usize - ptr as usize },
        88usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_SHA),
            "::",
            stringify!(mm)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).g1) as usize - ptr as usize },
        96usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_SHA),
            "::",
            stringify!(g1)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).g2) as usize - ptr as usize },
        104usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_SHA),
            "::",
            stringify!(g2)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).supp) as usize - ptr as usize },
        112usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_SHA),
            "::",
            stringify!(supp)
        )
    );
}
extern "C" {
    pub fn cha_allocate(
        arg1: CHA_PTR,
        arg2: ::core::ffi::c_int,
        arg3: ::core::ffi::c_int,
        arg4: ::core::ffi::c_int,
    ) -> *mut ::core::ffi::c_void;
}
extern "C" {
    pub fn cha_cleanup(arg1: CHA_PTR);
}
extern "C" {
    pub fn cha_chunk_size(arg1: CHA_PTR, arg2: ::core::ffi::c_int);
}
extern "C" {
    pub fn cha_data_gen(arg1: CHA_PTR, arg2: *mut ::core::ffi::c_char) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn cha_data_save(arg1: CHA_PTR, arg2: *mut ::core::ffi::c_char) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn cha_data_load(arg1: CHA_PTR, arg2: *mut ::core::ffi::c_char) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn cha_state_save(arg1: CHA_PTR, arg2: *mut CHA_STA) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn cha_state_copy(arg1: *mut CHA_STA, arg2: *mut CHA_STA) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn cha_state_free(arg1: *mut CHA_STA) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn cha_fft(arg1: *mut f32, arg2: ::core::ffi::c_int) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn cha_ifft(arg1: *mut f32, arg2: ::core::ffi::c_int) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn cha_fft_cr(arg1: *mut f32, arg2: ::core::ffi::c_int);
}
extern "C" {
    pub fn cha_fft_rc(arg1: *mut f32, arg2: ::core::ffi::c_int);
}
extern "C" {
    pub fn cha_prepare(arg1: CHA_PTR);
}
extern "C" {
    pub fn cha_scale(arg1: *mut f32, arg2: ::core::ffi::c_int, arg3: f32);
}
extern "C" {
    pub fn cha_version() -> *mut ::core::ffi::c_char;
}
extern "C" {
    pub fn cha_firfb_prepare(
        arg1: CHA_PTR,
        arg2: *mut f64,
        arg3: ::core::ffi::c_int,
        arg4: f64,
        arg5: ::core::ffi::c_int,
        arg6: ::core::ffi::c_int,
        arg7: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn cha_firfb_analyze(
        arg1: CHA_PTR,
        arg2: *mut f32,
        arg3: *mut f32,
        arg4: ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn cha_firfb_synthesize(
        arg1: CHA_PTR,
        arg2: *mut f32,
        arg3: *mut f32,
        arg4: ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn cha_iirfb_design(
        arg1: *mut f32,
        arg2: *mut f32,
        arg3: *mut f32,
        arg4: *mut ::core::ffi::c_int,
        arg5: *mut f64,
        arg6: ::core::ffi::c_int,
        arg7: ::core::ffi::c_int,
        arg8: f64,
        arg9: f64,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn cha_iirfb_prepare(
        arg1: CHA_PTR,
        arg2: *mut f32,
        arg3: *mut f32,
        arg4: *mut f32,
        arg5: *mut ::core::ffi::c_int,
        arg6: ::core::ffi::c_int,
        arg7: ::core::ffi::c_int,
        arg8: f64,
        arg9: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn cha_iirfb_analyze(
        arg1: CHA_PTR,
        arg2: *mut f32,
        arg3: *mut f32,
        arg4: ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn cha_iirfb_synthesize(
        arg1: CHA_PTR,
        arg2: *mut f32,
        arg3: *mut f32,
        arg4: ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn cha_cfirfb_prepare(
        arg1: CHA_PTR,
        arg2: *mut f64,
        arg3: ::core::ffi::c_int,
        arg4: f64,
        arg5: ::core::ffi::c_int,
        arg6: ::core::ffi::c_int,
        arg7: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn cha_cfirfb_analyze(
        arg1: CHA_PTR,
        arg2: *mut f32,
        arg3: *mut f32,
        arg4: ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn cha_cfirfb_synthesize(
        arg1: CHA_PTR,
        arg2: *mut f32,
        arg3: *mut f32,
        arg4: ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn cha_ciirfb_design(
        arg1: *mut f32,
        arg2: *mut f32,
        arg3: *mut f32,
        arg4: *mut ::core::ffi::c_int,
        arg5: ::core::ffi::c_int,
        arg6: *mut f64,
        arg7: *mut f64,
        arg8: f64,
        arg9: f64,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn cha_ciirfb_prepare(
        arg1: CHA_PTR,
        arg2: *mut f32,
        arg3: *mut f32,
        arg4: *mut f32,
        arg5: *mut ::core::ffi::c_int,
        arg6: ::core::ffi::c_int,
        arg7: ::core::ffi::c_int,
        arg8: f64,
        arg9: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn cha_ciirfb_analyze(
        arg1: CHA_PTR,
        arg2: *mut f32,
        arg3: *mut f32,
        arg4: ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn cha_ciirfb_synthesize(
        arg1: CHA_PTR,
        arg2: *mut f32,
        arg3: *mut f32,
        arg4: ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn cha_dciirfb_prepare(
        arg1: CHA_PTR,
        arg2: *mut f32,
        arg3: *mut f32,
        arg4: *mut f32,
        arg5: *mut ::core::ffi::c_int,
        arg6: ::core::ffi::c_int,
        arg7: ::core::ffi::c_int,
        arg8: f64,
        arg9: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn cha_dciirfb_analyze(
        arg1: CHA_PTR,
        arg2: *mut f32,
        arg3: *mut f32,
        arg4: ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn cha_dciirfb_synthesize(
        arg1: CHA_PTR,
        arg2: *mut f32,
        arg3: *mut f32,
        arg4: ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn cha_agc_prepare(
        arg1: CHA_PTR,
        arg2: *mut CHA_DSL,
        arg3: *mut CHA_WDRC,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn cha_agc_input(arg1: CHA_PTR, arg2: *mut f32, arg3: *mut f32, arg4: ::core::ffi::c_int);
}
extern "C" {
    pub fn cha_agc_channel(arg1: CHA_PTR, arg2: *mut f32, arg3: *mut f32, arg4: ::core::ffi::c_int);
}
extern "C" {
    pub fn cha_agc_output(arg1: CHA_PTR, arg2: *mut f32, arg3: *mut f32, arg4: ::core::ffi::c_int);
}
extern "C" {
    pub fn cha_icmp_prepare(
        arg1: CHA_PTR,
        arg2: *mut CHA_CLS,
        arg3: f64,
        arg4: f64,
        arg5: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn cha_icmp_process(
        arg1: CHA_PTR,
        arg2: *mut f32,
        arg3: *mut f32,
        arg4: ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn cha_afc_prepare(arg1: CHA_PTR, arg2: *mut CHA_AFC) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn cha_afc_filters(arg1: CHA_PTR, arg2: *mut CHA_AFC) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn cha_afc_input(arg1: CHA_PTR, arg2: *mut f32, arg3: *mut f32, arg4: ::core::ffi::c_int);
}
extern "C" {
    pub fn cha_afc_output(arg1: CHA_PTR, arg2: *mut f32, arg3: ::core::ffi::c_int);
}
extern "C" {
    pub fn cha_nfc_prepare(arg1: CHA_PTR, arg2: *mut CHA_NFC) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn cha_nfc_process(arg1: CHA_PTR, arg2: *mut f32, arg3: *mut f32, arg4: ::core::ffi::c_int);
}
extern "C" {
    pub fn cha_sha_prepare(arg1: CHA_PTR, arg2: *mut CHA_SHA) -> ::core::ffi::c_int;
}
